--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -62,7 +62,7 @@
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@types/node": "^20",
