--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,9 +48,11 @@
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "convex": "^1.25.4",
+    "countries-and-timezones": "^3.8.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jotai": "^2.13.0",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.4",
