--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.28.1",
     "@clerk/themes": "^2.4.4",
+    "@convex-dev/agent": "^0.1.16",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
