--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/google": "^1.2.22",
     "@clerk/backend": "^2.7.0",
     "@convex-dev/agent": "^0.1.16",
+    "@convex-dev/rag": "^0.3.3",
     "ai": "^4.3.19",
     "convex": "^1.25.4",
     "convex-helpers": "^0.1.100",
